public/style.css
/*This is just a place holder for now */
font-family: 'Roboto', sans-serif;

body{
  font-family: Roboto, sans-serif;
  margin: 0;
  position: fixed;

}

a{
  text-decoration: none;
}

.navbar{
  border-left: .5px solid #319df6;
  margin-left: 170px;
  position: sticky;
  background-color: #fff;
  font-size: 18px;
  line-height: 22px;
  z-index: 2;

}

.navlist{
  margin: 0 0 0 20px;
  padding: 0;
}

.navobj{
  display: inline-block;
}

a {
  color: #343434;
}
a:hover, a:focus{
  color: #319df6;
  outline: none;
}

.navlink a{
  padding: 8px 10px;
  display: inline-block;
}

.navlink.active{
  box-shadow: inset 0 -3px #319df6;
}

.navbar-search{
  float: right;
  margin-right: 20px;
  padding: 0;
  line-height: 38px;
}

#navbar-search-input{
  padding: 4px;
  font-size: 16px;
  background-color: #eee;
  border: 1px solid #dadada;
  border-radius: 2px
}
#navbar-search-input:focus{
  outline: none;
  background-color: #fff;
}

.error-container{
  margin-left: 170px;
  display: flex;
  position: fixed;
  z-index: 999;

  padding: 1em;
  flex-wrap: wrap;
  border: 1px solid #319df6;
  border-right: 0;
  background-color: rgba(128,128,128,.14);

}

.error-message{
  margin-top: 8px;
  text-align: right;
  font-weight: bold;
}

.article-container{
  margin-left: 170px;
  display: flex;
  position: fixed;
  z-index: 999;

  padding: 1em;
  flex-wrap: wrap;
  border: 1px solid #319df6;
  border-right: 0;
  background-color: rgba(128,128,128,.14);
  overflow: scroll;
  white-space:normal;
}

.article{
  flex: 0 1 28%;
  display: flex;
  margin: 2px;
  padding: 20px;
  border: 1px solid #dadada;
  border-radius: 2px;
  background-color: #fff;
}

.article-content {
  flex: 1 1 80%;
  margin-left: 10px;
}

.article-content p {
  margin: 0;
}

.article-content .artical-title{
  margin-top: 8px;
  text-align: right;
  font-weight: bold;
}

.article-title:hover{
  cursor: pointer;
  text-decoration: underline;
}

#edit-button {
  border: none;
      background-color: white;
      cursor: pointer;
      font-size: inherit;
      font: inherit;
      background: none;
      color: inherit;
}

#edit-button:hover,#edit-button:focus{
  border-top: 7px solid #319df6;
  background-color: #319df6;
  border-bottom: 7px solid #319df6;
}

#edit-button:focus{
  outline: none;
}

#modal-background{
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index:  1000;
  background-color: rgba(0, 0, 0, 0.85);
}

#edit-article-modal{
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1100;
  overflow: scroll;
}

.hidden{
  display: none;
}

.modal-dialog {
  width: auto;
  max-width: 600px;
  min-width: 350px;
  min-height: 300px;
  margin: 40px auto;
  background-color: #fff;
  border-radius: 15px;
}

.modal-header {
  position: relative;
  padding: 10px 20px;
}

.modal-header h3 {
  margin: 0;
  font-size: 28px;
}

.modal-close-button {
  position: absolute;
  right: 10px;
  top: 5px;
  font-size: 24px;
  border: none;
  background: none;
  padding: 0;
  cursor: pointer;
}

.modal-body {
  padding: 20px;
}

.article-input{
  display: flex;
  align-items: center;
  font-size: 20px;
  margin: 10px 0;
}

.article-input label{
  font-weight: 600;
  flex: 1 75px;
  margin-right: 10px;
}

.article-input input, .article-input textarea{
  flex: 6 200px;
  padding: 8px;
  font-size: 20px;
  border: 1px solid #aaa;
}

.article-input textarea{
  min-height: 64px;
}

.modal-footer {
  display: flex;
  justify-content: flex-end;
  padding: 10px 10px 20px 10px;
}

.modal-footer button {
  font-size: 20px;
  background-color: #fff;
  color: #333;
  border: 1px solid #333;
  border-radius: 5px;
  padding: 10px;
  margin-right: 20px;
  cursor: pointer;
}

.modal-footer .modal-cancel-button:hover {
  background-color: #eee;
}

.modal-footer .modal-accept-button {
  background-color: #319df6;
  color: #fff;
}

.modal-footer .modal-accept-button:hover {
  background-color: #087dde;
}

.panel{
  height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    padding-top: 20px;
    transition: 0.5s;

  }


.pannel-link a{
  margin: 0;
  padding-top: 0;

}

.pannel-link a:hover {
  cursor: pointer;
  text-decoration: underline;

}

.panel-nav{
  border-top: 1px solid #319df6;
    background-color: rgba(128,128,128,.14);
    display: inline-block;
    height: 100%;
    padding-right: 65px;
}

.article-image{

}

.content-main{
  padding: 0;
  margin: 0;
}

.article-title-main{
}

.article-title{
  font-weight: bold;
}
.article-info h2{
margin-top: 0;
border-bottom: 1px solid #319df6;
font-size: 50px;
}
.article-info{
    flex: 1 1 80%;
}

#logo{
  /*background-image: url("images/Logo.jpg");*/
}

